@@ -100,6 +100,7 @@
     lowercase-qml-type-name
   - New Fixits:
     range-loop now supports adding missing refs or const-ref
+    range-loop now supports adding qAsConst()
     function-args-by-ref now adding missing refs or const-ref (experimental)
     Introduced CLAZY_FIXIT_SUFFIX env variable
   - Removed support for the obscure -DCLAZY_BUILD_UTILS_LIB to simplify the CMakeLists.txt
